tests/fixtures/errors/unused_type_method.z
# unused_type_method.z -- method bodies of a type that is never referenced
# are still checked: the completion sweep walks every concrete type the
# demand-driven walks never reached.
Unused: class {
    n: i64
} as {
    badbody: function {:this} out i64 is {
        return true + 1
    }
}

main: function is {
    print "ok"
}
